<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">LoginRegister01</string>
    <string name="otpverification">otpVerification</string>
    <string name="otp_verification">otp_verification</string>
    <string name="we_will_send_you_a_one_time_password_on_this_mobile_number">we will send you a one time password on this mobile number</string>
    <string name="We_will_send_you_a_one_time_password_on_this_mobile_number">We_will_send_you_a_one_time_password_on_this_mobile_number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="otpVerification">otp Verification</string>
    <string name="or">OR</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="please_login_to_your_account">Please Login to your account</string>
    <string name="welcome">Welcome</string>
    <string name="todo">TODO</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="_254">+254</string>
    <string name="_0712345678">0712345678</string>
    <string name="get_otp">Get OTP</string>
    <string name="no">_</string>
    <string name="verify">Verify</string>
    <string name="did_not_receive_otp">Did not receive OTP?</string>
    <string name="resend_code">Resend Code</string>
    <string name="_254_0723963795">+254–0723963795</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="test_gmail_com">test@gmail.com</string>
    <string name="email_address">Email Address</string>
    <string name="please_enter_the_verification_code">Please enter the verification code</string>
    <string name="_07">07</string>
    <string name="_254n">+254-</string>
    <string name="_0700000000">0700000000</string>
    <string name="_0723963795">0723963795</string>
    <string name="pamoja_prep">Pamoja prep</string>
    <string name="login">Login</string>
    <string name="please_verify_the_email_sent_to">Please verify the email sent to</string>
    <string name="check_your_phone_for_the_code_sent_to">Check your phone for the code sent to</string>
    <string name="term_of_service">Term of Service</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="last_update_june_1_2023">Last update June 1 2023</string>
    <string name="googlebtn">googleBtn</string>
    <string name="i_have_read_the_terms_and_conditions">I have read the terms and conditions</string>
    <string name="please_re_type_the_password">Please re-type the password</string>
    <string name="password_should_be">Password should be</string>
    <string name="at_least_one_uppercase">At least one Uppercase</string>
    <string name="at_least_one_lowercase">At least one Lowercase</string>
    <string name="at_least_one_number">At least one Number</string>
    <string name="at_least_one_special_character">At least one Special character</string>
    <string name="minimum_8_characters">Minimum 8 characters</string>
    <string name="please_enter_valid_email">Please enter valid email</string>
    <string name="please_enter_a_valid_mobile_number">Please enter a valid mobile number</string>
    <string name="please_enter_full_name">Please enter Full Name</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="i_am_over_18_years">I am over 18 years</string>
    <string name="i_have_read_and_agreed_to_the_terms_and_conditions">I have read and agreed to the terms and conditions.</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="next">Next</string>
    <string name="at_least_one_symbol" />
    <string name="coming_soon">Coming Soon...</string>
    <string name="english">English</string>
    <string name="history">History</string>
    <string name="geography">Geography</string>
    <string name="chemistry">Chemistry</string>
    <string name="physics">Physics</string>
    <string name="biology">Biology</string>
    <string name="elements_in_our_day_to_day">Elements in our day to day</string>
    <string name="mathematics">Mathematics</string>
    <string name="transforming_academics_at_your_your_finger_tips">Transforming academics at your your finger tips.</string>
    <string name="back">Back</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_nav">Open Navigation Drawer </string>
    <string name="close_nav"> Close Navigation Drawer</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="verification_link_sent_to">Verification link sent to:</string>
</resources>