<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/app_image_6"
    tools:context=".Login">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/pamoja_prep"
            android:fontFamily="sans-serif-medium"
            android:layout_marginBottom="25dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/please_login_to_your_account"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="90dp"
        android:hint="@string/email"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/fui_transparent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_back_dark_blue5_15"
            android:fontFamily="sans-serif-medium"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="#455A64"
            tools:ignore="VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="15dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black"
        android:hint="Password"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/fui_transparent">

        <TextView
            android:id="@+id/tvPasswordError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_password"
            android:visibility="gone"
            android:textColor="@android:color/holo_red_dark"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:background="@drawable/round_back_dark_blue5_15"
            android:textColor="@color/black"
            android:inputType="textWebPassword"
            android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>



    
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        android:textSize="18sp"
        android:textAllCaps="true"
        android:layout_marginTop="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/round_back_primary_15"
        android:textColor="@color/white"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/forgotPasswordBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_blue1"
        android:text="@string/forgot_password"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <View
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#1A000000"
            android:layout_toStartOf="@id/orTxt"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp" />

        <TextView
            android:id="@+id/orTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/or"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="normal" />

        <View
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#1A000000"
            android:layout_toEndOf="@id/orTxt"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp">

        <ImageView
            android:id="@+id/googleBtn"
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:layout_centerVertical="true"
            android:background="@color/white"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:adjustViewBounds="true"
            android:src="@drawable/google_icon"
            android:contentDescription="@string/googlebtn" />

        <TextView
            android:id="@+id/signIn"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/sign_in_with_google"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/signUpBtn"
            android:layout_marginStart="5dp"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:text="@string/sign_up"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:background="@drawable/round_back_black1"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>