<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TermsAndConditions1">

    <CheckBox
        android:id="@+id/checkId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_and_conditions"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/next"
        android:visibility="gone"
        app:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/checkId"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/checkId"
        app:layout_constraintTop_toTopOf="@+id/checkId" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/orange"
        android:fontFamily="sans-serif-medium"
        android:paddingStart="5dp"
        android:paddingEnd="8dp"
        android:text="@string/back"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:icon="@drawable/baseline_arrow_back_24"
        app:iconGravity="textStart"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnNext"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="@+id/btnNext"
        app:layout_constraintTop_toBottomOf="@+id/btnNext"
        app:layout_constraintVertical_bias="0.521"
        tools:ignore="VisualLintButtonSize" />


</androidx.constraintlayout.widget.ConstraintLayout>